Feat: docker compose & databaseHandler Refactor: errorHandler & xmlHandler

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,27 +1,25 @@
-# docker compose -f ./docker/docker-compose.yml up -d
-# docker exec -it docker-db-1 /bin/bash
-# cat /docker-entrypoint/init_db.sql | mysql -uroot -p1234
-
-# mysql -uroot -p1234
 services:
   db:
     image: mysql:8
     ports:
-      - "3307:3306"
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: 1234
       MYSQL_DATABASE: crawl_data
       MYSQL_USER: user
       MYSQL_PASSWORD: 1234
     volumes:
+      # var/lib/mysql에 없으면 docker-entrypoint-initdb.d에서 찾으니까 이걸 먼저
+      - ../utils/db/init_db.sql:/docker-entrypoint-initdb.d/init.sql
       - ../utils/db/data:/var/lib/mysql
-      - ../utils/db/init_db.sql:/docker-entrypoint/init_db.sql
-    restart: unless-stopped
-    # CVE-2023-24540, CVE-2023-24538 에러 발생
-    # command: cat /docker-entrypoint/init_db.sql | mysql -uroot -p1234
-  
-  # crawler:
-  #   image: 내가 만든 이미지
-  #   depends_on:
-  #     - db
-  #   command: 배포 파일 실행 명령어
+      
+  crawler:
+    image: my-crawler:1.0
+    depends_on:
+      - db
+    # 컨테이너가 중단됐을 때(db보다 먼저 살아나서 요청한 바람에 에러 뜬 경우) 컨테이너를 다시 알아서 재시작
+    restart: on-failure
+    command: bash -c "execute_crawler"  # 빌드 파일. Dockerfile 참고
+volumes:
+  db:
+    driver: local
